# munchkill

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: solver.h  solver_context.h  trail.h
include/branching/: brancher.h  dfs_brancher.h  first_fail_brancher.h
include/constraints/: atomic_constraint.h  constraint.h  literal.h  not_equals.h
include/constraints/implementations/: atomic_constraint.h  not_equals.h
include/propagation/: propagation_status.h  propagator_queue.h
include/utils/: asserts.h  domain_event.h  operator.h  update_result.h
include/variables/: variable.h  variable_iter.h  variable_operators.h  variable_single_holes.h
src/: main.cpp  solver.cpp  solver_context.cpp  trail.cpp
src/branching/: dfs_brancher.cpp  first_fail_brancher.cpp
src/constraints/: atomic_constraint.cpp  literal.cpp  not_equals.cpp
src/constraints/implementations/: atomic_constraint.cpp  not_equals.cpp
src/propagation/: propagator_queue.cpp
src/variables/: variable.cpp  variable_operators.cpp  variable_single_holes.cpp
tests/: CMakeLists.txt  test_utils.h
tests/variables/: variable_iter_test.cpp  variable_single_holes_test.cpp
